/*
 *  Copyright 2017 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciExperiment";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

import "label.proto";
import "trial.proto";
import "sensor_layout.proto";
import "sensor_trigger.proto";
import "sensor_spec.proto";

/*
 * Experiment protobuf definition.
 * Added in V2.
 */
message Experiment {
    // The timestamp that this experiment was created.
    optional int64 creationTimeMs = 1;

    // The user-entered title of this experiment.
    optional string title = 2;

    // The user-entered description of this experiment.
    optional string description = 3;

    // SensorLayouts associated with this experiment.  (That is, the sensors that are currently
    // shown in cards)
    repeated SensorLayout sensorLayouts = 4;

    // Trials in this experiment.
    repeated Trial trials = 5;

    // Labels in this experiment.
    repeated Label labels = 6;

    // Sensors included in or excluded from this experiment.
    // (should use availableSensors instead; this field was never populated.)
    repeated ExperimentSensor experimentSensors = 7 [deprecated = true];

    // Sensor triggers associated with sensors in this experiment.
    repeated SensorTrigger sensorTriggers = 8;

    // The version code of this proto. Devices may use this to understand what version of data
    // they are working with, and to perform upgrades.
    // A combination of the major and minor versions is used to understand what is available in this
    // proto. Major version numbers represent large, non-backwards-compatable changes.
    // See ExperimentCache#upgradeExperimentVersionIfNeeded for more on versions.
    // Version 1.1: Initial version
    optional int32 version = 9 [default = 1];

    // The minor verion code for this proto. Devices may use this to understand what version of data
    // they are working with, and to perform upgrades.
    // A combination of the major and minor versions is used to understand what is available in this
    // proto. Minor version numbers represent small, non-breaking changes. A device running an older
    // version of Science Journal should be able to parse a proto with a newer minorVersion so long
    // as the version is the same. However, that device should only *read* and not *write* older
    // version protos because data would be lost in the write.
    // See ExperimentCache#upgradeExperimentVersionIfNeeded for more on versions.
    // Version 1.1: Initial version
    optional int32 minorVersion = 10 [default = 1];

    // Version 1.2: Added
    message SensorEntry {
      // The sensor ID associated with this within this experiment.
      // This has no global uniqueness or parseable meaning outside this experiment
      optional string sensorId = 1;

      // The spec of the sensor with this id.
      optional SensorSpec spec = 2;
    }

    // Which sensors are currently shown as available in the sensor cards to be observed.
    // If a host device is not able to observe sensors in availableSensors,
    // perhaps because it loaded an experiment created from a different device,
    // those sensors will be disabled in sensor cards.
    repeated SensorEntry availableSensors = 11;
};

/*
 * Sensors included or excluded in an experiment.
 * TODO: Work with saff to figure out if other information needs to be included, such as
 * a name the user gives their device that represents the type of sensors.
 */
message ExperimentSensor {
    // The sensor ID
    optional string sensorId = 1;

    // Whether this sensor is included.
    optional bool included = 2;
}