/*
 *  Copyright 2017 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciLabel";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

import "caption.proto";
import "label_value.proto";

/*
 * Label protobuf definition
 * Added in V2.
 */
message Label {
    // The ID is unique within an experiment, but cannot be assumed to be unique across
    // experiments, as users may "copy" entire experiments from Drive.
    // This ID should probably be a unique GUID.
    optional string labelId = 1;

    // The time in ms since the epoch which represents this label in time.
    // This may be the time at which the label was created, but some labels
    // have editable timestamps.
    optional int64 timestampMs = 2;

    // The contents of the label.
    repeated LabelValue values = 3;

    // The time that the label was created. This is not editable.
    optional int64 creationTimeMs = 4;

    // An optional user-added caption. Not all labels will make use of this field.
    // Currently text labels will not use this, but picture, trigger, and snapshot will.
    optional Caption caption = 5;
}